--- a/axit.css
+++ b/axit.css
@@ -42,7 +42,7 @@ body{
 .header header{
     width: 100%;
     height: 43vw;
-    background-image: url(/img/header.jpg);
+    background-image: url(img/header.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -456,7 +456,7 @@ body{
      margin-top: 5px;
  }
  .container .stylish{
-     background-image: url(/img/custom1.png);
+     background-image: url(img/custom1.png);
      text-align:center;
      background-repeat:no-repeat;
      background-size:cover;
